--- a/package.json
+++ b/package.json
@@ -79,5 +79,10 @@
 		"tailwind-scrollbar": "2.0.1",
 		"tailwindcss": "3.2.4",
 		"typescript": "4.9.4"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"sharp"
+		]
 	}
 }
