--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,20 @@
 {
-	"editor.formatOnSave": true,
-	"eslint.alwaysShowStatus": true,
-	"eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact",
-  ],
 	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": true
+		"source.fixAll.eslint": "explicit"
+	},
+	"editor.formatOnSave": true,
+	"editor.quickSuggestions": {
+		"strings": true
+	},
+	"eslint.validate": [
+		"javascript",
+		"javascriptreact",
+		"typescript",
+		"typescriptreact"
+	],
+	"tailwindCSS.includeLanguages": {
+		"javascriptreact": "html",
+		"plaintext": "html",
+		"typescriptreact": "html"
 	}
 }
