--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		}
 	},
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "next dev",
 		"start": "next start",
 		"build": "pnpm run partytown && next build",
 		"partytown": "partytown copylib public/~partytown",
@@ -61,11 +61,11 @@
 		"@commitlint/cli": "17.3.0",
 		"@commitlint/config-conventional": "17.3.0",
 		"@next/eslint-plugin-next": "15.2.1",
+		"@tailwindcss/postcss": "^4.0.10",
 		"@types/node": "18.11.13",
 		"@types/react": "19.0.10",
 		"@typescript-eslint/eslint-plugin": "5.46.0",
 		"@typescript-eslint/parser": "5.46.0",
-		"autoprefixer": "10.4.13",
 		"eslint": "8.29.0",
 		"eslint-config-next": "15.2.1",
 		"eslint-config-prettier": "8.5.0",
@@ -75,9 +75,10 @@
 		"next-sitemap": "3.1.32",
 		"postcss": "8.4.31",
 		"prettier": "2.8.1",
+		"prettier-plugin-tailwindcss": "0.6.11",
 		"standard-version": "9.5.0",
-		"tailwind-scrollbar": "2.0.1",
-		"tailwindcss": "3.2.4",
+		"tailwind-scrollbar": "4.0.1",
+		"tailwindcss": "4.0.10",
 		"typescript": "4.9.5"
 	},
 	"pnpm": {
