--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
+	"plugins": ["prettier-plugin-tailwindcss"],
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-tailwindcss"]
+	"singleQuote": true,
+	"jsxSingleQuote": true,
+	"trailingComma": "none",
+	"useTabs": true
 }
