--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"start": "next start",
-		"build": "pnpm run partytown && next build",
-		"partytown": "partytown copylib public/~partytown",
+		"build": "next build",
 		"lint": "next lint",
 		"lint:fix": "eslint src --fix && pnpm run format",
 		"test": "jest",
@@ -38,7 +37,6 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
-		"@builder.io/partytown": "0.7.3",
 		"axios": "1.6.0",
 		"cssnano": "5.1.14",
 		"framer-motion": "7.6.19",
@@ -48,8 +46,6 @@
 		"next-images": "1.8.4",
 		"next-pwa": "5.6.0",
 		"next-seo": "5.15.0",
-		"postcss-import": "15.1.0",
-		"postcss-nesting": "10.2.0",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"react-icons": "4.7.1",
@@ -60,21 +56,24 @@
 	"devDependencies": {
 		"@commitlint/cli": "17.3.0",
 		"@commitlint/config-conventional": "17.3.0",
+		"@eslint/eslintrc": "3.3.0",
+		"@eslint/js": "9.21.0",
 		"@next/eslint-plugin-next": "15.2.1",
 		"@tailwindcss/postcss": "^4.0.10",
 		"@types/node": "18.11.13",
 		"@types/react": "19.0.10",
 		"@typescript-eslint/eslint-plugin": "5.46.0",
 		"@typescript-eslint/parser": "5.46.0",
-		"eslint": "8.29.0",
+		"eslint": "9.21.0",
 		"eslint-config-next": "15.2.1",
-		"eslint-config-prettier": "8.5.0",
-		"eslint-plugin-prettier": "4.2.1",
+		"eslint-config-prettier": "10.0.2",
+		"eslint-plugin-prettier": "5.2.3",
+		"globals": "16.0.0",
 		"husky": "8.0.2",
 		"lint-staged": "13.1.0",
 		"next-sitemap": "3.1.32",
 		"postcss": "8.4.31",
-		"prettier": "2.8.1",
+		"prettier": "3.5.3",
 		"prettier-plugin-tailwindcss": "0.6.11",
 		"standard-version": "9.5.0",
 		"tailwind-scrollbar": "4.0.1",
