--- a/.versionrc
+++ b/.versionrc
@@ -1,6 +1,15 @@
 {
 	"types": [
 		{
+			"type": "chore",
+			"section": "Chores",
+			"hidden": true
+		},
+		{
+			"type": "docs",
+			"section": "Documentation"
+		},
+		{
 			"type": "feat",
 			"section": "Features"
 		},
@@ -9,26 +18,25 @@
 			"section": "Bug Fixes"
 		},
 		{
+			"type": "perf",
+			"section": "Performance Improvements"
+		},
+		{
 			"type": "refactor",
 			"section": "Improvements"
+		},
+		{
+			"type": "revert",
+			"section": "Reverts",
+			"hidden": true
 		},
 		{
 			"type": "style",
 			"section": "Styles"
 		},
 		{
-			"type": "docs",
-			"section": "Documentation"
-		},
-		{
-			"type": "chore",
-			"section": "Chores",
-			"hidden": true
-		},
-		{
-			"type": "revert",
-			"section": "Reverts",
-			"hidden": true
+			"type": "test",
+			"section": "Tests"
 		}
 	]
 }
