--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 		"module": "ESNext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
+		"incremental": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
 		"paths": {
