--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"axios": "1.8.1",
 		"framer-motion": "7.6.19",
 		"next": "15.2.1",
-		"next-auth": "4.24.5",
+		"next-auth": "5.0.0-beta.25",
 		"next-compose-plugins": "2.2.1",
 		"next-images": "1.8.4",
 		"next-pwa": "5.6.0",
