--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "2.0.2",
 	"private": true,
 	"type": "module",
-	"description": "Tool to check who doesn't follow you back on GitHub",
+	"description": "A simple tool to check the users that doesn't follow you back 🧐",
 	"author": {
 		"name": "Gustavo Morinaga",
 		"email": "me@gustavomorinaga.dev",
@@ -47,18 +47,19 @@
 		"preinstall": "npx only-allow pnpm"
 	},
 	"dependencies": {
-		"axios": "1.8.1",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
+		"class-variance-authority": "0.7.1",
+		"clsx": "2.1.1",
 		"framer-motion": "7.6.19",
+		"lucide-react": "0.479.0",
 		"next": "15.2.1",
 		"next-auth": "5.0.0-beta.25",
-		"next-compose-plugins": "2.2.1",
-		"next-images": "1.8.4",
 		"next-pwa": "5.6.0",
-		"next-seo": "5.15.0",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
-		"react-icons": "4.7.1",
-		"swr": "2.0.0"
+		"tailwind-merge": "3.0.2",
+		"tailwindcss-animate": "1.0.7"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "19.7.1",
@@ -66,7 +67,7 @@
 		"@eslint/eslintrc": "3.3.0",
 		"@eslint/js": "9.21.0",
 		"@next/eslint-plugin-next": "15.2.1",
-		"@tailwindcss/postcss": "^4.0.10",
+		"@tailwindcss/postcss": "4.0.10",
 		"@types/node": "22.13.9",
 		"@types/react": "19.0.10",
 		"@typescript-eslint/eslint-plugin": "8.26.0",
@@ -79,7 +80,6 @@
 		"eslint-plugin-prettier": "5.2.3",
 		"husky": "9.1.7",
 		"lint-staged": "15.4.3",
-		"next-sitemap": "3.1.32",
 		"postcss": "8.5.3",
 		"prettier": "3.5.3",
 		"prettier-plugin-tailwindcss": "0.6.11",
