--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
 			"$*": ["./src/*"]
 		}
 	},
-	"include": [".next/types/**/*.ts", "next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"]
+	"include": [".next/types/**/*.ts", "next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
+	"exclude": ["node_modules"]
 }
