--- a/package.json
+++ b/package.json
@@ -47,11 +47,12 @@
 		"preinstall": "npx only-allow pnpm"
 	},
 	"dependencies": {
-		"@radix-ui/react-label": "^2.1.2",
-		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-avatar": "^1.1.3",
+		"@radix-ui/react-label": "2.1.2",
+		"@radix-ui/react-slot": "1.1.2",
+		"@tanstack/react-table": "8.21.2",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
-		"framer-motion": "7.6.19",
 		"lucide-react": "0.479.0",
 		"next": "15.2.1",
 		"next-auth": "5.0.0-beta.25",
