--- a/package.json
+++ b/package.json
@@ -42,14 +42,15 @@
 		"push-release": "git push --follow-tags origin main",
 		"pull": "git rebase origin main -i",
 		"pre-commit": "pnpm run lint",
-		"postbuild": "next-sitemap --config next-sitemap.config.js",
 		"prepare": "husky",
 		"preinstall": "npx only-allow pnpm"
 	},
 	"dependencies": {
-		"@radix-ui/react-avatar": "^1.1.3",
+		"@radix-ui/react-avatar": "1.1.3",
+		"@radix-ui/react-checkbox": "1.1.4",
 		"@radix-ui/react-label": "2.1.2",
 		"@radix-ui/react-slot": "1.1.2",
+		"@radix-ui/react-tooltip": "1.1.8",
 		"@tanstack/react-table": "8.21.2",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
