--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,7 @@
 {
 	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": "explicit"
+		"source.fixAll": "always"
 	},
 	"editor.formatOnSave": true,
-	"editor.quickSuggestions": {
-		"strings": true
-	},
-	"eslint.validate": [
-		"javascript",
-		"javascriptreact",
-		"typescript",
-		"typescriptreact"
-	],
-	"tailwindCSS.includeLanguages": {
-		"javascriptreact": "html",
-		"plaintext": "html",
-		"typescriptreact": "html"
-	}
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
