--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"eslint-config-next": "15.2.1",
 		"eslint-config-prettier": "10.0.2",
 		"eslint-plugin-prettier": "5.2.3",
+		"eslint-plugin-react-hooks": "5.2.0",
 		"husky": "9.1.7",
 		"lint-staged": "15.4.3",
 		"postcss": "8.5.3",
