--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	"dependencies": {
 		"@radix-ui/react-avatar": "1.1.3",
 		"@radix-ui/react-checkbox": "1.1.4",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-label": "2.1.2",
 		"@radix-ui/react-slot": "1.1.2",
 		"@radix-ui/react-tooltip": "1.1.8",
@@ -55,9 +56,11 @@
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
 		"lucide-react": "0.479.0",
+		"motion": "^12.4.11",
 		"next": "15.2.1",
 		"next-auth": "5.0.0-beta.25",
 		"next-pwa": "5.6.0",
+		"next-themes": "0.4.5",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"tailwind-merge": "3.0.2",
