--- a/package.json
+++ b/package.json
@@ -46,17 +46,21 @@
 		"preinstall": "npx only-allow pnpm"
 	},
 	"dependencies": {
+		"@mdx-js/loader": "3.1.0",
+		"@mdx-js/react": "3.1.0",
+		"@next/mdx": "15.2.1",
 		"@radix-ui/react-avatar": "1.1.3",
 		"@radix-ui/react-checkbox": "1.1.4",
-		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-dropdown-menu": "2.1.6",
 		"@radix-ui/react-label": "2.1.2",
 		"@radix-ui/react-slot": "1.1.2",
 		"@radix-ui/react-tooltip": "1.1.8",
 		"@tanstack/react-table": "8.21.2",
+		"@types/mdx": "2.0.13",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
 		"lucide-react": "0.479.0",
-		"motion": "^12.4.11",
+		"motion": "12.4.11",
 		"next": "15.2.1",
 		"next-auth": "5.0.0-beta.25",
 		"next-pwa": "5.6.0",
@@ -73,6 +77,7 @@
 		"@eslint/js": "9.21.0",
 		"@next/eslint-plugin-next": "15.2.1",
 		"@tailwindcss/postcss": "4.0.10",
+		"@tailwindcss/typography": "0.5.16",
 		"@types/node": "22.13.9",
 		"@types/react": "19.0.10",
 		"@typescript-eslint/eslint-plugin": "8.26.0",
