feat: integrate preferences and data table contexts

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@radix-ui/react-dropdown-menu": "2.1.6",
 		"@radix-ui/react-label": "2.1.2",
 		"@radix-ui/react-navigation-menu": "1.2.5",
+		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-slot": "1.1.2",
 		"@tanstack/react-table": "8.21.2",
 		"@types/mdx": "2.0.13",
