--- a/package.json
+++ b/package.json
@@ -49,12 +49,13 @@
 		"@mdx-js/loader": "3.1.0",
 		"@mdx-js/react": "3.1.0",
 		"@next/mdx": "15.2.1",
+		"@radix-ui/react-alert-dialog": "^1.1.6",
 		"@radix-ui/react-avatar": "1.1.3",
 		"@radix-ui/react-checkbox": "1.1.4",
 		"@radix-ui/react-dropdown-menu": "2.1.6",
 		"@radix-ui/react-label": "2.1.2",
 		"@radix-ui/react-navigation-menu": "1.2.5",
-		"@radix-ui/react-select": "^2.1.6",
+		"@radix-ui/react-select": "2.1.6",
 		"@radix-ui/react-slot": "1.1.2",
 		"@tanstack/react-table": "8.21.2",
 		"@types/mdx": "2.0.13",
@@ -69,7 +70,8 @@
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"tailwind-merge": "3.0.2",
-		"tailwindcss-animate": "1.0.7"
+		"tailwindcss-animate": "1.0.7",
+		"vaul": "1.1.2"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "19.7.1",
