--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"@mdx-js/loader": "3.1.0",
 		"@mdx-js/react": "3.1.0",
 		"@next/mdx": "15.2.1",
-		"@radix-ui/react-alert-dialog": "^1.1.6",
+		"@radix-ui/react-alert-dialog": "1.1.6",
 		"@radix-ui/react-avatar": "1.1.3",
 		"@radix-ui/react-checkbox": "1.1.4",
 		"@radix-ui/react-dropdown-menu": "2.1.6",
@@ -69,6 +69,7 @@
 		"next-themes": "0.4.5",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
+		"sonner": "2.0.1",
 		"tailwind-merge": "3.0.2",
 		"tailwindcss-animate": "1.0.7",
 		"vaul": "1.1.2"
