--- a/.prettierignore
+++ b/.prettierignore
@@ -1,22 +1,21 @@
-.vscode
-.husky
-.next
-/node_modules
-/.pnp
-.pnp.js
-/coverage
-/.next/
-/out/
-/build
-.DS_Store
-*.pem
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.vercel
+**/.DS_Store
+**/.env.development.local
+**/.env.local
+**/.env.production.local
+**/.env.test.local
+**/.github
+**/.husky
+**/.next
+**/.pnp.js
+**/.vercel
+**/.vscode
+**/*.pem
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+build
+coverage
+node_modules
+out/
 public/*.js
 public/*.map
