--- a/.github/ISSUE_TEMPLATE/2-feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/2-feature_request.yml
@@ -3,44 +3,44 @@ description: Request a new feature
 labels: [triage]
 body:
   - type: markdown
-		attributes:
-			value: |
-				**Is your feature request related to a problem? Please describe.**
-				A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
+    attributes:
+      value: |
+        **Is your feature request related to a problem? Please describe.**
+        A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
 
-	- type: textarea
-		id: feature-request
-		attributes:
-			label: Feature Request
-			description: 'Please describe the feature you would like to see implemented'
-			placeholder: 'I would like to see [...]'
-		validations:
-			required: true
+  - type: textarea
+    id: feature-request
+    attributes:
+      label: Feature Request
+      description: "Please describe the feature you would like to see implemented"
+      placeholder: "I would like to see [...]"
+    validations:
+      required: true
 
-	- type: markdown
-		attributes:
-			value: |
-				**Describe the solution you'd like**
-				A clear and concise description of what you want to happen.
+  - type: markdown
+    attributes:
+      value: |
+        **Describe the solution you'd like**
+        A clear and concise description of what you want to happen.
 
-	- type: textarea
-		id: solution
-		attributes:
-			label: Proposed Solution
-			description: 'Please describe the solution you would like to see implemented'
-			placeholder: 'I would like to see [...]'
-		validations:
-			required: true
+  - type: textarea
+    id: solution
+    attributes:
+      label: Proposed Solution
+      description: "Please describe the solution you would like to see implemented"
+      placeholder: "I would like to see [...]"
+    validations:
+      required: true
 
-	- type: markdown
-		attributes:
-			value: |
-				**Additional context**
-				Add any other context or screenshots about the feature request here.
+  - type: markdown
+    attributes:
+      value: |
+        **Additional context**
+        Add any other context or screenshots about the feature request here.
 
-	- type: textarea
-		id: additional-context
-		attributes:
-			label: Additional Context
-			description: 'Add any other context or screenshots about the feature request here'
-			placeholder: 'I would like to see [...]'
+  - type: textarea
+    id: additional-context
+    attributes:
+      label: Additional Context
+      description: "Add any other context or screenshots about the feature request here"
+      placeholder: "I would like to see [...]"
