--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@mdx-js/loader": "3.1.0",
 		"@mdx-js/react": "3.1.0",
 		"@next/mdx": "15.2.1",
+		"@radix-ui/react-accordion": "^1.2.3",
 		"@radix-ui/react-alert-dialog": "1.1.6",
 		"@radix-ui/react-avatar": "1.1.3",
 		"@radix-ui/react-checkbox": "1.1.4",
