--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"@mdx-js/loader": "3.1.0",
 		"@mdx-js/react": "3.1.0",
 		"@next/mdx": "15.2.1",
-		"@radix-ui/react-accordion": "^1.2.3",
+		"@radix-ui/react-accordion": "1.2.3",
 		"@radix-ui/react-alert-dialog": "1.1.6",
 		"@radix-ui/react-avatar": "1.1.3",
 		"@radix-ui/react-checkbox": "1.1.4",
@@ -60,6 +60,7 @@
 		"@radix-ui/react-slot": "1.1.2",
 		"@tanstack/react-table": "8.21.2",
 		"@types/mdx": "2.0.13",
+		"@uidotdev/usehooks": "2.4.1",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
 		"lucide-react": "0.479.0",
