fix: remove redundant linting command for docs in lintstagedrc

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,4 @@
 {
 	"*.+(md)": "pnpm format:staged",
-	"src/**/*.+(js|jsx|ts|tsx)": "pnpm format:staged && pnpm lint",
-	"docs/**/*.+(md)": "pnpm format:staged"
+	"src/**/*.+(js|jsx|ts|tsx)": "pnpm format:staged && pnpm lint"
 }
