--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"pnpm": ">=9",
 		"node": ">=22"
 	},
-	"packageManager": "pnpm@10.5.2",
+	"packageManager": "pnpm@10.6.5",
 	"scripts": {
 		"dev": "next dev",
 		"start": "next start",
@@ -58,6 +58,7 @@
 		"@radix-ui/react-navigation-menu": "1.2.5",
 		"@radix-ui/react-select": "2.1.6",
 		"@radix-ui/react-slot": "1.1.2",
+		"@rescale/slim": "1.0.1",
 		"@tanstack/react-table": "8.21.2",
 		"@types/mdx": "2.0.13",
 		"@uidotdev/usehooks": "2.4.1",
