--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
 		"@rescale/slim": "1.0.1",
 		"@tanstack/react-table": "8.21.2",
 		"@types/mdx": "2.0.13",
-		"@uidotdev/usehooks": "2.4.1",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
 		"lucide-react": "0.479.0",
@@ -71,6 +70,7 @@
 		"next-themes": "0.4.5",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
+		"react-haiku": "2.2.0",
 		"sonner": "2.0.1",
 		"tailwind-merge": "3.0.2",
 		"tailwindcss-animate": "1.0.7",
